# apiservers/portlayer/swagger.yml
@@ -448,12 +448,12 @@ paths:
           description: "Error"
           schema:
             $ref: "#/definitions/Error"
-  /interaction/{id}/join:
-    post:
-      description: "Establish an interaction session with a container by id"
-      summary: "Establishes an interactive session (ala docker attach)"
-      operationId: ContainerJoin
-      tags: ["interaction"]
+  /containers/{handle}/info:
+    get:
+      description: "Retrieve info about a container by id"
+      summary: "Retrieve a container's info"
+      operationId: ContainerInfo
+      tags: ["containers"]
       consumes:
         - application/octet-stream
       produces:
@@ -464,6 +464,49 @@ paths:
           type: string
           required: true
       responses:
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "Retrieve info succeeded"
+          schema:
+            type: string
+        default:
+          description: "Error"
+          schema:
+            $ref: "#/definitions/Error"
+  /interaction/{id}/resize:
+    post:
+      description: "Resize the container's tty session"
+      summary: "Resize tty session"
+      operationId: ContainerResize
+      tags: ["interaction"]
+      consumes:
+        - application/octet-stream
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+        - name: height
+          in: query
+          type: integer
+          format: int32
+          required: true
+        - name: width
+          in: query
+          type: integer
+          format: int32
+          required: true
+      responses:
+        '500':
+          description: "Container resize failed"
+          schema:
+            $ref: "#/definitions/Error"
         '404':
           description: "Container not found"
           schema:
